# comfyui-serverless

./: .coverage  .env  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  DEPLOY_RUNPOD.md  Dockerfile.prod  Dockerfile.runpod  Dockerfile.simple  QUICK_START.md  README.md  coverage.xml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.test.yml  push-to-github.sh  pyproject.toml  requirements-dev.txt  runpod.toml  runpod_handler.py  runpod_handler_simple.py  runpod_startup.sh  test-api-simple.py  test-docker-integration.py  test-quick.py  test-report.md
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: docker-build.yml  test.yml
docker/: Dockerfile.mock-comfyui  Dockerfile.test
docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  RUNPOD_DEPLOYMENT.md  agent.md  api-architecture.md  api-design-patterns.md  comfyui-architecture-analysis.md  deployment-architecture.md  deployment-guide.md  performance-architecture.md  research-summary.md  runpod-deployment.md  security-architecture.md  serverless-deployment-requirements.md  storage-and-infrastructure.md  storage-caching-architecture.md  system-architecture.md  technical-specifications.md  workflow-management.md
docs/api/: advanced-features.md  api-reference.md  developer-guide.md  getting-started.md  openapi.yaml  sdk-examples.md  technical-architecture.md  workflow-patterns.md
memory/agents/: README.md
memory/sessions/: README.md
scripts/: build_on_runpod.sh  create_admin.py  deploy-production.sh  deploy-runpod-cloud.sh  deploy-runpod.sh  deploy_runpod.py  generate_secrets.py  setup.sh  test-runpod-local.sh  test_api.py  test_client.py  test_runpod.py
src/: requirements.txt
src/api/: main.py  middleware.py
src/api/routers/: __init__.py  auth.py  files.py  health.py  metrics.py  models.py  workflow.py
src/config/: settings.py
src/core/: database.py
src/database/: alembic.ini
src/database/migrations/: env.py
src/database/migrations/versions/: 001_initial_migration.py
src/infrastructure/docker/: Dockerfile  docker-compose.yml
src/infrastructure/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
src/models/: database.py  schemas.py
src/services/: auth.py  cleanup.py  comfyui.py  model.py  monitoring.py  storage.py  webhook.py  workflow.py
src/utils/: gpu.py  pagination.py  validation.py
tests/: conftest.py  pytest.ini  requirements.txt
tests/config/: pytest.ini  test_settings.py
tests/fixtures/: __init__.py  data_generators.py  factories.py  test_data.py
tests/integration/: test_api.py  test_api_endpoints.py  test_workflow_integration.py
tests/load/: test_performance.py
tests/unit/: test_auth_service.py  test_comfyui_service.py  test_model_service.py  test_monitoring_service.py  test_storage_service.py  test_validation.py  test_webhook_service.py  test_workflow_service.py
tests/utils/: test_helpers.py
